--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "ts:check": "tsc"
   },
   "dependencies": {
+    "@expo/vector-icons": "^14.0.0",
     "@react-native-community/checkbox": "^0.5.17",
     "@react-navigation/native": "^6.1.15",
     "@react-navigation/native-stack": "^6.9.24",
