--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-native-get-random-values": "^1.11.0",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.29.0",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "expo-updates": "~0.24.11"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
