--- a/package.json
+++ b/package.json
@@ -12,19 +12,20 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.0",
     "@react-native-community/checkbox": "^0.5.17",
-    "@react-navigation/native": "^6.1.15",
+    "@react-navigation/bottom-tabs": "^6.5.20",
+    "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.24",
     "expo": "~50.0.11",
     "expo-status-bar": "~1.11.1",
+    "expo-updates": "~0.24.11",
     "firebase": "^10.8.1",
     "react": "18.2.0",
     "react-native": "0.73.4",
     "react-native-elements": "^3.4.3",
     "react-native-get-random-values": "^1.11.0",
-    "react-native-safe-area-context": "^4.9.0",
-    "react-native-screens": "^3.29.0",
-    "uuid": "^9.0.1",
-    "expo-updates": "~0.24.11"
+    "react-native-safe-area-context": "4.8.2",
+    "react-native-screens": "~3.29.0",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
